--- a/less/main.less
+++ b/less/main.less
@@ -100,20 +100,22 @@ html, body {
 	min-width: @body-min-width !important;
 }
 
+@screen-min-height: 500px;
+@screen-min-height-base: (@screen-min-height / 100);
 .screen-height-rel {
 	.vh() {}
-	& .vh-12_5, &.vh-12_5 { .vh(); height: 12.5vh; }
-	& .vh-25, &.vh-25 { .vh(); height: 25vh; }
-	& .vh-50, &.vh-50 { .vh(); height: 50vh; }
-	& .vh-75, &.vh-75 { .vh(); height: 75vh; }
-	& .vh-100, &.vh-100 { .vh(); height: 100vh; }
-	& .vh-125, &.vh-125 { .vh(); height: 125vh; }
-	& .vh-150, &.vh-150 { .vh(); height: 150vh; }
-	& .vh-175, &.vh-175 { .vh(); height: 175vh; }
-	& .vh-200, &.vh-200 { .vh(); height: 200vh; }
-	& .vh-250, &.vh-250 { .vh(); height: 250vh; }
-	& .vh-300, &.vh-300 { .vh(); height: 300vh; }
-	& .vh-400, &.vh-400 { .vh(); height: 400vh; }
+	& .vh-12_5, &.vh-12_5 { .vh(); height: 12.5vh; min-height: (12.5 * @screen-min-height-base); }
+	& .vh-25, &.vh-25 { .vh(); height: 25vh; min-height: (25 * @screen-min-height-base); }
+	& .vh-50, &.vh-50 { .vh(); height: 50vh; min-height: (50 * @screen-min-height-base); }
+	& .vh-75, &.vh-75 { .vh(); height: 75vh; min-height: (75 * @screen-min-height-base); }
+	& .vh-100, &.vh-100 { .vh(); height: 100vh; min-height: (100 * @screen-min-height-base); }
+	& .vh-125, &.vh-125 { .vh(); height: 125vh; min-height: (125 * @screen-min-height-base); }
+	& .vh-150, &.vh-150 { .vh(); height: 150vh; min-height: (150 * @screen-min-height-base); }
+	& .vh-175, &.vh-175 { .vh(); height: 175vh; min-height: (175 * @screen-min-height-base); }
+	& .vh-200, &.vh-200 { .vh(); height: 200vh; min-height: (200 * @screen-min-height-base); }
+	& .vh-250, &.vh-250 { .vh(); height: 250vh; min-height: (250 * @screen-min-height-base); }
+	& .vh-300, &.vh-300 { .vh(); height: 300vh; min-height: (300 * @screen-min-height-base); }
+	& .vh-400, &.vh-400 { .vh(); height: 400vh; min-height: (400 * @screen-min-height-base); }
 }
 
 @base-height: 1000px;
@@ -265,10 +267,6 @@ html, body {
 	.phase;
 	z-index: 300;
 	
-	&, .container, .container-fluid {
-		min-height: 768px;
-	}
-	
 	> .back {
 		&, & .back {
 			&.fill {
@@ -283,8 +281,6 @@ html, body {
 	
 	.container, .container-fluid {
 		position: relative; // everything inside is absolutely-positioned
-		
-		overflow: hidden;
 	}
 	
 	> .overlay {
